# springtail

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  Dockerfile.base  Doxyfile  Flow.txt  PARALLEL_TRANS_DDL_With_Sleep.sql  README.md  SECURITY.md  WORKLOG.md  clean.sh  conanfile.txt  debug.sh  docker-compose.yml  otel_config.yaml  otel_logs.cpp  package.sh  potential_bugs.md  prod.system.settings.json  prom_config.yaml  release.sh  system.json  system.json.local  system.json.settings  vcpkg.json  vcpkg.sh  vcpkg_files.txt
benchmarks/storage/: CMakeLists.txt
benchmarks/storage/src/: minio_bench.cc
modules/cdc/: CMakeLists.txt
modules/cdc/include/: PgConnection.hh  ReplConnection.hh  ReplMsg.hh
modules/cdc/src/: PqConnection.cc  ReplConnection.cc  ReplMsg.cc
src/admin_http/: CMakeLists.txt  admin_server.cc
src/benchmarks/: CMakeLists.txt  crash.cc  file_bench.cc  minio_bench.cc
src/common/: CMakeLists.txt  aws.cc  common.cc  common_init.cc  coordinator.cc  dns_resolver.cc  exception.cc  grpc_client.cc  grpc_server_manager.cc  init.cc  libpq_connection.cc  logging.cc  metrics.cc  multi-queue-thread-manager.cc  multi_queue_thread_manager.cc  open_telemetry.cc  pg_common.cc  properties.cc  redis.cc  redis_cache.cc  redis_ddl.cc  thread_pool.cc  time_trace.cc  timestamp.cc  tracing.cc  tracking_allocator.cc
src/common/test/: log_tester.cc  test_common.cc  test_coordinator.cc  test_counter.cc  test_dns.cc  test_exception.cc  test_filesystem.cc  test_queue.cc  test_redis.cc  test_redis_cache.cc  test_singleton.cc  test_sorted_merge.cc  test_synchronizer.cc  test_thread.cc  test_thread_manager.cc  test_time_trace.cc  test_timestamp.cc
src/garbage_collector/: CMakeLists.txt  committer.cc  gc_daemon.cc  gc_extent_mapper.cc  gc_log_parser.cc  indexer.cc  log_parser.cc
src/garbage_collector/test/: test_extent_mapper.cc
src/ingest/: CMakeLists.txt  ingest.cc  ingest.hh
src/ingest/test/: sample.sql  test_ingest.cc
src/ipc/: CMakeLists.txt  event_loop.cc  io_watcher.cc  pid_watcher.cc  signal_watcher.cc  timer_watcher.cc  watcher.cc
src/pg_ext/: CMakeLists.txt  array.cc  bit.cc  crc.cc  date.cc  domains.cc  error.cc  extn_parser.cc  extn_registry.cc  float.cc  fmgr.cc  guc.cc  hash.cc  heaptuple.cc  jsonb.cc  list.cc  memory.cc  node.cc  numeric.cc  parser.cc  pqformat.cc  regex.cc  reloptions.cc  sort.cc  string.cc  test_runner.cc  toast.cc  trgm_helpers.cc  type.cc
src/pg_fdw/: CMakeLists.txt  README  README.md  environment  multi-queue-thread-manager.cc  multicorn_util.c  path_util.c  pg_ddl_daemon.cc  pg_ddl_mgr.cc  pg_fdw.c  pg_fdw.cc  pg_fdw_ddl_common.cc  pg_fdw_mgr.cc  pg_fdw_mgr_wrap.cc  pg_fdw_plan_state.cc  pg_shm_cache.cc  pg_xid_collector.cc  pg_xid_collector_client.cc  pg_xid_collector_daemon.cc  pg_xid_subscriber_daemon.cc  pg_xid_subscriber_mgr.cc  springtail_fdw--1.0.sql  springtail_fdw.control  trgm_query_helpers.cc
src/pg_fdw/test/: copy_schema.cc  dump_table.cc  gen_schema_sql.cc  mock_pg.c  test_field_quals.cc  test_pg_ddl_mgr.cc  test_pg_fdw_common.cc  test_thread_manager.cc  test_xid_subscriber.cc  where.cc  where_test.cc  xid_collector_client.cc
src/pg_log_mgr/: CMakeLists.txt  committer.cc  indexer.cc  pg_log_coordinator.cc  pg_log_file.cc  pg_log_gen.cc  pg_log_mgr.cc  pg_log_mgr_common.cc  pg_log_mgr_daemon.cc  pg_log_reader.cc  pg_log_recovery.cc  pg_log_writer.cc  pg_xact_handler.cc  pg_xact_log_reader.cc  pg_xact_log_reader_mmap.cc  pg_xact_log_writer.cc  pg_xact_log_writer_mmap.cc  sync_tracker.cc
src/pg_log_mgr/test/: dump_repl_log.cc  dump_xact_log.cc  gen_log.cc  (+9 more)
src/pg_repl/: CMakeLists.txt  libpq_connection.cc  pg_common.cc  pg_copy_table.cc  pg_msg_log_gen.cc  pg_msg_stream.cc  pg_repl_connection.cc  pg_repl_msg.cc  pg_stream_table.cc  pg_table_validator.cc  pg_wal_decode.cc  pg_wal_dump.cc  triggers.sql
src/proxy/: CMakeLists.txt  MESSAGE_FLOWS  authorization.cc  buffer_pool.cc  client_session.cc  connection.cc  daemon.cc  database.cc  history_cache.cc  parser.cc  request_handler.cc  server.cc  server_session.cc  session.cc  user_mgr.cc
src/psql_cdc/: CMakeLists.txt  libpq_connection.cc  libpq_helper.cc  pg_copy_table.cc  pg_repl_connection.cc  pg_repl_msg.cc  pg_wal_decode.cc  pg_wal_dump.cc  triggers.sql
src/redis/: CMakeLists.txt  redis_cache.cc  redis_db_tables.cc  redis_ddl.cc
src/storage/: CMakeLists.txt  btree.cc  cache.cc  cache_tracing.cc  compressors.cc  compressors.hh  data_cache.cc  datafile.cc  datafile.hh  extent.cc  extent.hh  field.cc  field.hh  gist_helpers.cc  io.cc  io_file.cc  io_mgr.cc  io_pool.cc  io_request.cc  io_test.cc  mutable_btree.cc  numeric_utils.cc  schema.cc  schema.hh  schema_column.cc  schema_column.hh  schema_manager.cc  schema_mgr.cc  schema_type.hh  system_tables.cc  table.cc  table_manager.cc  table_mgr.cc  vacuumer.cc
src/sys_tbl_mgr/: CMakeLists.txt  client.cc  daemon.cc  merge_table.cc  merge_table.hh  mutable_table.cc  schema_cache.cc  schema_helpers.cc  schema_mgr.cc  server.cc  service.cc  shm_cache.cc  sys_tbl_mgr_client.cc  sys_tbl_mgr_daemon.cc  sys_tbl_mgr_server.cc  sys_tbl_mgr_service.cc  system_mutable_table.cc  system_table_mgr.cc  system_table_mgr_client.cc  system_table_mgr_server.cc  system_tables.cc  table.cc  table_mgr.cc  table_mgr_base.cc  table_mgr_client.cc
src/test/: CMakeLists.txt  ddl_helpers.cc  file_system_check.cc  services.cc
src/thrift/: CMakeLists.txt  sys_tbl_mgr.thrift  write_cache.thrift  xid_mgr.thrift
src/thrift_override/: CMakeLists.txt
src/write_cache/: .gitignore  CMakeLists.txt  README.md  extent_mapper.cc  write_cache.cc  write_cache.thrift  write_cache_client.cc  write_cache_daemon.cc  write_cache_fbs.fbs  write_cache_index.cc  write_cache_index_node.cc  write_cache_index_test.cc  write_cache_server.cc  write_cache_service.cc  write_cache_table_set.cc
src/xid_mgr/: CMakeLists.txt  pg_xact_log_reader.cc  pg_xact_log_writer.cc  xid_mgr.thrift  xid_mgr_client.cc  xid_mgr_daemon.cc  xid_mgr_server.cc  xid_mgr_service.cc  xid_mgr_subscriber.cc  xid_partition.cc
(+1018 files in other folders)
